B-F Sandbox Full-Backup/src/objects/Account_Brand__c.object
<CustomObject>
    <description>INFOWELDERS - Brands Related to this Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>INFOWELDERS</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Brands</relationshipLabel>
        <relationshipName>Account_Brands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INFOWELDERS</description>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Account Brands</relationshipLabel>
        <relationshipName>Account_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depletion_Actuals__c</fullName>
        <description>INFOWELDERS - Depletion actuals for this brand at this outlet for this fiscal year as calculated based on depletion records</description>
        <inlineHelpText>Depletion actuals for this brand at this outlet for this fiscal year</inlineHelpText>
        <label>Depletion Actuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY_End__c</fullName>
        <description>INFOWELDERS - The end date of the Fiscal Year for this Account Brand Record</description>
        <inlineHelpText>The end date of the Fiscal Year for this Account Brand Record</inlineHelpText>
        <label>FY End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FY_Start__c</fullName>
        <description>INFOWELDERS - The start date of the Fiscal Year for this Account Brand Record</description>
        <inlineHelpText>The start date of the Fiscal Year for this Account Brand Record</inlineHelpText>
        <label>FY Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>INFOWELDERS</description>
        <formula>TEXT( YEAR( FY_End__c ))</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Gauge__c</fullName>
        <description>INFOWELDERS</description>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chf=bg,s,F3F3EC&amp;chd=t:&quot;&amp;TEXT(  of_Forecast__c  *10 )&amp;&quot;&amp;chds=0,10&amp;chma=10,0,10,0&amp;chs=220x100&amp;chl=&quot;&amp;LEFT(TEXT(of_Forecast__c *100 ),4)&amp;&quot; %&quot;,&quot;Depletion to Forecast&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percent to Forecast based on actual depletions recorded.</inlineHelpText>
        <label>Forecast Gauge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <description>INFOWELDERS</description>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Gauge__c</fullName>
        <description>INFOWELDERS</description>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chf=bg,s,F3F3EC&amp;chd=t:&quot;&amp;TEXT(  of_Goal__c  *10 )&amp;&quot;&amp;chds=0,10&amp;chma=10,0,10,0&amp;chs=220x100&amp;chl=&quot;&amp;LEFT(TEXT(of_Goal__c *100 ),4)&amp;&quot; %&quot;,&quot;Depletion to Budget&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percent to Goal based on actual depletions recorded.</inlineHelpText>
        <label>Goal Gauge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <description>INFOWELDERS</description>
        <label>Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Brand_Icon__c</fullName>
        <formula>IF( Key_Brand__c = true, IMAGE(&quot;/resource/1280772831000/INFW_Resources/key.png&quot;, &quot; &quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Brand Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INFOWELDERS</description>
        <label>Key Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Required_Brand_Icon__c</fullName>
        <formula>IF( Required_Brand__c = true, IMAGE(&quot;/resource/1280772831000/INFW_Resources/exclamation.png&quot;, &quot; &quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Brand Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <formula>Brand__r.Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Forecast__c</fullName>
        <formula>Depletion_Actuals__c / Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Forecast</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Goal__c</fullName>
        <description>INFOWELDERS</description>
        <formula>Depletion_Actuals__c / Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Goal</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Account Brand</label>
    <nameField>
        <displayFormat>AB-{0000000}</displayFormat>
        <label>Account Brands Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>